--- a/infra/addons/frontend/templates/service.yaml
+++ b/infra/addons/frontend/templates/service.yaml
@@ -13,8 +13,8 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
+      targetPort: {{ .Values.service.targetPort | default "http" }}
+      protocol: {{ .Values.service.protocol | default "TCP" }}
       name: http
   selector:
     {{- include "frontend.selectorLabels" . | nindent 4 }}
