--- a/infra/addons/frontend/templates/servicemonitor.yaml
+++ b/infra/addons/frontend/templates/servicemonitor.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.metrics.enabled }}
+{{- if .Values.monitoring.serviceMonitor.enabled }}
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
@@ -6,6 +6,9 @@ metadata:
   name: {{ include "frontend.fullname" . }}
   labels:
     {{- include "frontend.labels" . | nindent 4 }}
+    {{- with .Values.monitoring.serviceMonitor.labels }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
     release: prometheus-stack-{{ .Release.Namespace | default "dev" }}
 spec:
   selector:
@@ -13,6 +16,6 @@ spec:
       {{- include "frontend.selectorLabels" . | nindent 6 }}
   endpoints:
     - port: http
-      path: {{ .Values.metrics.path }}
-      interval: 15s
+      path: {{ .Values.monitoring.metrics.path | default "/metrics" }}
+      interval: {{ .Values.monitoring.serviceMonitor.interval | default "30s" }}
 {{- end }}
