--- a/infra/addons/frontend/values.yaml
+++ b/infra/addons/frontend/values.yaml
@@ -1,8 +1,3 @@
-
-api:
-  baseUrl: http://backend:8000
-
-
 # CONTAINER IMAGE CONFIGURATION
 image:
   repository: kapilbhalodiya/ecom-frontend
@@ -74,6 +69,7 @@ volumes:
 
 # SECURITY CONTEXT
 # Pod security context
+securityContext:
   runAsNonRoot: true      # Don't run as root user
   runAsUser: 101         # Run as nginx user (101)
   runAsGroup: 101        # Run as nginx group (101)
