--- a/infra/addons/frontend/templates/deployment.yaml
+++ b/infra/addons/frontend/templates/deployment.yaml
@@ -65,6 +65,9 @@ spec:
         - name: {{ $name }}
           {{- if eq $config.type "emptyDir" }}
           emptyDir: {}
+          {{- else if eq $config.type "configMap" }}
+          configMap:
+            name: {{ tpl $config.configMapName $ }}
           {{- end }}
         {{- end }}
       {{- end }}
