--- a/infra/addons/backend/values.yaml
+++ b/infra/addons/backend/values.yaml
@@ -68,14 +68,14 @@ healthChecks:
     timeoutSeconds: 5
     failureThreshold: 3
   
-  readinessProbe:
-    httpGet:
-      path: /ready
-      port: 3000
-    initialDelaySeconds: 10
-    periodSeconds: 5
-    timeoutSeconds: 3
-    failureThreshold: 3
+  # readinessProbe:
+  #   httpGet:
+  #     path: /health
+  #     port: 3000
+  #   initialDelaySeconds: 10
+  #   periodSeconds: 5
+  #   timeoutSeconds: 3
+  #   failureThreshold: 3
 
 # Persistent and temporary storage configuration
 volumes:
