--- a/infra/addons/ingress/templates/ingress.yaml
+++ b/infra/addons/ingress/templates/ingress.yaml
@@ -1,35 +1,69 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: {{ include "ingress.fullname" . }}
-  namespace: {{ .Values.namespace | default .Release.Namespace }}
-  labels:
-    {{- include "ingress.labels" . | nindent 4 }}
-  annotations:
-    {{- if .Values.tls.enabled }}
-    cert-manager.io/cluster-issuer: {{ .Values.tls.issuer | quote }}
-    {{- end }}
-    {{- range $key, $value := .Values.annotations }}
-    {{ $key }}: {{ $value | quote }}
-    {{- end }}
-spec:
-  ingressClassName: {{ .Values.ingressClassName | quote }}
-  {{- if .Values.tls.enabled }}
-  tls:
-  - hosts:
-    - {{ .Values.domain | quote }}
-    secretName: {{ .Values.tls.secretName }}
-  {{- end }}
-  rules:
-  - host: {{ .Values.domain | quote }}
-    http:
-      paths:
-      {{- range .Values.services }}
-      - path: {{ .path }}
-        pathType: {{ .pathType }}
-        backend:
-          service:
-            name: {{ .serviceName }}
-            port:
-              number: {{ .servicePort }}
-      {{- end }}
+# {{- if .Values.ingress.enabled | default true }}
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   name: {{ include "ingress.fullname" . }}
+#   namespace: {{ .Values.namespace | default .Release.Namespace }}
+#   labels:
+#     {{- include "ingress.labels" . | nindent 4 }}
+#   annotations:
+#     {{- if .Values.tls.enabled }}
+#     cert-manager.io/cluster-issuer: {{ .Values.tls.issuer | quote }}
+#     {{- end }}
+#     {{- with .Values.ingress.annotations }}
+#     {{- toYaml . | nindent 4 }}
+#     {{- end }}
+#     {{- with .Values.annotations }}
+#     {{- range $key, $value := . }}
+#     {{ $key }}: {{ $value | quote }}
+#     {{- end }}
+#     {{- end }}
+# spec:
+#   ingressClassName: {{ .Values.ingress.className | default .Values.ingressClassName | quote }}
+#   {{- if .Values.tls.enabled }}
+#   tls:
+#     {{- if .Values.tls.certificates }}
+#     {{- range .Values.tls.certificates }}
+#     - hosts:
+#         {{- range .hosts }}
+#         - {{ . | quote }}
+#         {{- end }}
+#       secretName: {{ .secretName }}
+#     {{- end }}
+#     {{- else }}
+#     - hosts:
+#         - {{ .Values.domain | quote }}
+#       secretName: {{ .Values.tls.secretName }}
+#     {{- end }}
+#   {{- end }}
+#   rules:
+#     {{- if .Values.hosts }}
+#     {{- range .Values.hosts }}
+#     - host: {{ .host | quote }}
+#       http:
+#         paths:
+#           {{- range .paths }}
+#           - path: {{ .path }}
+#             pathType: {{ .pathType }}
+#             backend:
+#               service:
+#                 name: {{ .backend.service.name }}
+#                 port:
+#                   number: {{ .backend.service.port.number }}
+#           {{- end }}
+#     {{- end }}
+#     {{- else if .Values.domain }}
+#     - host: {{ .Values.domain | quote }}
+#       http:
+#         paths:
+#           {{- range .Values.services }}
+#           - path: {{ .path }}
+#             pathType: {{ .pathType }}
+#             backend:
+#               service:
+#                 name: {{ .serviceName }}
+#                 port:
+#                   number: {{ .servicePort }}
+#           {{- end }}
+#     {{- end }}
+# {{- end }}
