--- a/infra/config/dev/monitoring-system/loki/values.yaml
+++ b/infra/config/dev/monitoring-system/loki/values.yaml
@@ -1,110 +1,106 @@
-# Development Loki Configuration
-# This file contains development-specific Loki settings for log aggregation
-# Configured for SimpleScalable deployment mode with reduced resources
+# Loki log aggregation system configuration for development
+# Simplified single-binary deployment for local development and testing
 
-# Loki log aggregation system configuration
+# LOKI DEPLOYMENT CONFIGURATION
 loki:
-  # Use SimpleScalable deployment mode for development
-  # This separates components but with minimal resources for testing
-  deploymentMode: SimpleScalable
+  # Storage configuration (no persistence in dev)
+    persistence:
+      enabled: false        # Disable persistent storage for development
+      # Use emptyDir for temporary storage (data lost on pod restart)
+    
+  # Additional volumes for development
+    extraVolumes:
+      - name: loki-data     # Temporary storage volume
+        emptyDir: {}        # EmptyDir volume (ephemeral)
+    
+  # Volume mounts for Loki container
+    extraVolumeMounts:
+      - name: loki-data     # Mount temporary storage
+        mountPath: /loki    # Loki data directory
   
-  # Loki core configuration
-  loki:
-    fullnameOverride: loki-dev   # Override name for development instance
+# DISTRIBUTED COMPONENTS (DISABLED FOR DEV)
+# Disable distributed components for single-node development
+# Backend component configuration (handles compaction, deletion, etc.)
+    backend:
+      replicas: 1                  # Single replica for development
+      resources:
+        requests:
+          cpu: "20m"               # Minimal CPU for development
+          memory: "200Mi"          # Minimal memory for development
+        limits:
+          cpu: "100m"              # Lower CPU limit for dev
+          memory: "300Mi"          # Lower memory limit for dev
+      persistence:
+        enabled: false             # Disable persistence for development (ephemeral)
     
-    # Authentication and security
-    auth_enabled: false          # Disable authentication for development
+    # Read component configuration (handles queries)
+    read:
+      replicas: 1                  # Single replica for development
+      resources:
+        requests:
+          cpu: "16m"               # Minimal CPU for development
+          memory: "195Mi"          # Minimal memory for development
+        limits:
+          cpu: "50m"               # Lower CPU limit for dev
+          memory: "1Gi"            # Memory limit for read operations
+      persistence:
+        enabled: false             # Disable persistence for development
     
-    # Storage configuration using filesystem (not cloud storage)
-    storage:
-      type: filesystem           # Use local filesystem storage
-      bucketNames:
-        chunks: loki-chunks-dev  # Chunk storage bucket name
-        ruler: loki-ruler-dev    # Ruler storage bucket name
-        admin: loki-admin-dev    # Admin storage bucket name
+    # Write component configuration (handles log ingestion)
+    write:
+      replicas: 1                  # Single replica for development
+      resources:
+        requests:
+          cpu: "41m"               # Minimal CPU for development
+          memory: "804Mi"          # Memory for write operations
+        limits:
+          cpu: "100m"              # Lower CPU limit for dev
+          memory: "1Gi"            # Memory limit for write operations
+      persistence:
+        enabled: false             # Disable persistence for development
+
+# GATEWAY CONFIGURATION
+# Loki gateway for load balancing and authentication
+    gateway:
+      enabled: true           # Enable gateway for consistent API
+      replicas: 1             # Single gateway replica for dev
+      
+      # Resource allocation for gateway
+      resources:
+        requests:
+          cpu: "50m"          # Minimum CPU for gateway
+          memory: "64Mi"      # Minimum memory for gateway
+        limits:
+          cpu: "100m"         # Maximum CPU for gateway
+          memory: "128Mi"     # Maximum memory for gateway
     
-    # Development-friendly limits (more permissive)
+# LOKI SERVER CONFIGURATION
+# Core Loki server settings
+    loki:     
+      # Server configuration
+      server:
+        http_listen_port: 3100  # HTTP API port
+        grpc_listen_port: 9095  # gRPC port for internal communication
+      
+      # Common configuration for all components
+      common:
+        path_prefix: /loki    # Base path for Loki data
+        storage:
+          filesystem:         # Use filesystem storage for development
+            chunks_directory: /loki/chunks    # Directory for log chunks
+            rules_directory: /loki/rules      # Directory for alerting rules
+        replication_factor: 1 # Single replica (no replication in dev)
+        ring:
+          kvstore:
+            store: inmemory   # Use in-memory key-value store
+
+# LIMITS CONFIGURATION
+# Rate limiting and resource limits for development
     limits_config:
-      retention_period: 7d       # Keep logs for 7 days (shorter for dev)
-      ingestion_rate_mb: 8       # Lower ingestion rate for dev
-      ingestion_burst_size_mb: 16 # Smaller burst size for dev
-    
-    # Storage backend configuration
-    storage_config:
-      filesystem:
-        directory: /var/loki/data # Directory for storing log data
-      boltdb_shipper:
-        active_index_directory: /var/loki/data/boltdb-index
-        cache_location: /var/loki/data/boltdb-cache
-        shared_store: filesystem
-  
-  # Backend component configuration (handles compaction, deletion, etc.)
-  backend:
-    replicas: 1                  # Single replica for development
-    resources:
-      requests:
-        cpu: "20m"               # Minimal CPU for development
-        memory: "200Mi"          # Minimal memory for development
-      limits:
-        cpu: "100m"              # Lower CPU limit for dev
-        memory: "300Mi"          # Lower memory limit for dev
-    persistence:
-      enabled: false             # Disable persistence for development (ephemeral)
-  
-  # Read component configuration (handles queries)
-  read:
-    replicas: 1                  # Single replica for development
-    resources:
-      requests:
-        cpu: "16m"               # Minimal CPU for development
-        memory: "195Mi"          # Minimal memory for development
-      limits:
-        cpu: "50m"               # Lower CPU limit for dev
-        memory: "1Gi"            # Memory limit for read operations
-    persistence:
-      enabled: false             # Disable persistence for development
-  
-  # Write component configuration (handles log ingestion)
-  write:
-    replicas: 1                  # Single replica for development
-    resources:
-      requests:
-        cpu: "41m"               # Minimal CPU for development
-        memory: "804Mi"          # Memory for write operations
-      limits:
-        cpu: "100m"              # Lower CPU limit for dev
-        memory: "1Gi"            # Memory limit for write operations
-    persistence:
-      enabled: false             # Disable persistence for development
-  
-  # Gateway component configuration (load balancer/proxy)
-  gateway:
-    replicas: 1                  # Single replica for development
-    resources:
-      requests:
-        cpu: "10m"               # Minimal CPU for development
-        memory: "100Mi"          # Minimal memory for development
-      limits:
-        cpu: "25m"               # Lower CPU limit for dev
-        memory: "250Mi"          # Lower memory limit for dev
-  
-  # Disable components not needed for development
-  singleBinary:
-    replicas: 0                  # Disable single binary mode
-  
-  # Monitoring configuration
-  monitoring:
-    serviceMonitor:
-      enabled: true              # Enable Prometheus monitoring
-      labels:
-        release: prometheus-stack-dev  # Label for Prometheus discovery
-  
-  # Disable optional components to reduce resource usage
-  minio:
-    enabled: false               # No MinIO object storage
-  lokiCanary:
-    enabled: false               # No canary testing in development
-  ruler:
-    enabled: false               # No alerting rules in development
-  test:
-    enabled: false               # No test pods in development
+      enforce_metric_name: false        # Don't enforce metric names
+      reject_old_samples: true          # Reject old log samples
+      reject_old_samples_max_age: 168h  # Maximum age for log samples (7 days)
+      ingestion_rate_mb: 16             # Ingestion rate limit (MB/s)
+      ingestion_burst_size_mb: 32       # Burst size limit (MB)
+      max_query_parallelism: 32         # Maximum parallel queries
+      max_streams_per_user: 10000       # Maximum streams per tenant
