--- a/infra/addons/loki/values.yaml
+++ b/infra/addons/loki/values.yaml
@@ -1,146 +1,39 @@
-# Loki Log Aggregation System Configuration
-# Loki is a horizontally-scalable, highly-available log aggregation system
 loki:
-  # Use SingleBinary mode for development/small deployments
-  # This runs all Loki components in a single process, reducing resource requirements
   deploymentMode: SingleBinary
-
-  # Disable optional components to reduce resource usage
-  minio:
-    enabled: false      # Disable MinIO object storage (using filesystem instead)
-  lokiCanary:
-    enabled: false      # Disable canary deployment testing
-  ruler:
-    enabled: false      # Disable alerting rules engine
-  memcachedExporter:
-    enabled: false      # Disable memcached metrics export
-  chunksCache:
-    enabled: false      # Disable chunk caching (reduces memory usage)
-  resultsCache:
-    enabled: false      # Disable query result caching
-    
-  # SingleBinary configuration - all components in one pod
+  
+  loki:
+    auth_enabled: false
+    commonConfig:
+      replication_factor: 1
+    storage:
+      type: 'filesystem'
+    schemaConfig:
+      configs:
+        - from: "2024-01-01"
+          store: tsdb
+          object_store: filesystem
+          schema: v13
+          index:
+            prefix: loki_index_
+            period: 24h
+  
   singleBinary:
-    replicas: 1         # Single replica for development
+    replicas: 1
     resources:
       requests:
-        cpu: "100m"      # Minimum CPU required
-        memory: "128Mi"   # Minimum memory required
+        cpu: 100m
+        memory: 256Mi
       limits:
-        cpu: "200m"      # Maximum CPU allowed
-        memory: "256Mi"     # Maximum memory allowed
-
-  # Disable multi-component deployment modes (used in production)
-  backend:
-    replicas: 0         # Disable separate backend component
-  read:
-    replicas: 0         # Disable separate read component
-  write:
-    replicas: 0         # Disable separate write component
-
-  # Disable all individual microservice components (used in microservices mode)
-  ingester:
-    replicas: 0         # Disable log ingestion service
-  querier:
-    replicas: 0         # Disable query service
-  queryFrontend:
-    replicas: 0         # Disable query frontend
-  queryScheduler:
-    replicas: 0         # Disable query scheduler
-  distributor:
-    replicas: 0         # Disable log distribution service
-  compactor:
-    replicas: 0         # Disable log compaction service
-  indexGateway:
-    replicas: 0         # Disable index gateway
-  bloomCompactor:
-    replicas: 0         # Disable bloom filter compactor
-  bloomGateway:
-    replicas: 0         # Disable bloom filter gateway
-
-  # Disable test pods
+        cpu: 500m
+        memory: 512Mi
+  
+  chunksCache:
+    enabled: false
+  resultsCache:
+    enabled: false
+  
+  gateway:
+    enabled: false
+  
   test:
     enabled: false
-
-  # Disable gateway (not needed in SingleBinary mode)
-  gateway:
-    replicas: 0         # Gateway handles load balancing in multi-component mode
-
-  # Loki core configuration
-  loki:
-    # Disable caching to reduce memory usage in development
-    memcached:
-      chunk_cache:
-        enabled: false    # Disable chunk caching
-      results_cache:
-        enabled: false    # Disable query result caching
-    
-    # Security and RBAC settings
-    auth_enabled: false   # Disable authentication for development
-    enabled: true         # Enable Loki service
-    rbac:
-      pspEnabled: false   # Disable Pod Security Policies (deprecated)
-    isDefault: true       # Set as default log aggregation system
-    
-    # Health check configuration
-    readinessProbe:
-      httpGet:
-        path: /ready      # Readiness endpoint
-        port: http-metrics
-      initialDelaySeconds: 45  # Wait 45s before first check
-    livenessProbe:
-      httpGet:
-        path: /ready      # Liveness endpoint
-        port: http-metrics
-      initialDelaySeconds: 45  # Wait 45s before first check
-    
-    # Resource limits for development environment
-    resources:
-      limits:
-        memory: "500Mi"   # Maximum memory usage
-      requests:
-        cpu: "50m"        # Minimum CPU required
-        memory: "256Mi"   # Minimum memory required
-
-    # Loki internal configuration
-    structuredConfig:
-      # Rate limiting and resource limits
-      limits_config:
-        allow_structured_metadata: false  # Disable structured metadata for simplicity
-      
-      # Log ingestion configuration
-      ingester:
-        chunk_idle_period: 30m    # How long to wait before flushing idle chunks
-        chunk_block_size: 1000000 # Size of each chunk block
-        chunk_retain_period: 5m   # How long to retain chunks in memory
-        chunk_encoding: snappy    # Compression algorithm for chunks
-
-      # Schema configuration defines how logs are stored and indexed
-      schema_config:
-        configs:
-          # Simple schema for development using filesystem storage
-          - from: 2020-07-01
-            store: boltdb-shipper   # Use BoltDB for index storage
-            object_store: filesystem # Use filesystem for chunk storage
-            schema: v11             # Schema version
-            index:
-              prefix: index_          # Index prefix
-              period: 24h            # Index rotation period
-
-      # Log compaction and retention
-      compactor:
-        retention_enabled: false   # Disable automatic log retention
-
-      # Storage backend configuration
-      storage_config:
-        # Filesystem storage configuration (instead of cloud storage)
-        filesystem:
-          directory: /var/loki/data/chunks  # Directory for log chunks
-        boltdb_shipper:
-          active_index_directory: /var/loki/data/boltdb-index  # BoltDB index location
-          cache_location: /var/loki/data/boltdb-cache         # BoltDB cache location
-          shared_store: filesystem                            # Use filesystem as shared store
-        tsdb_shipper:
-          active_index_directory: /var/loki/data/tsdb-index
-          cache_location: /var/loki/data/tsdb-cache
-          shared_store: filesystem
