--- a/infra/addons/loki/values.yaml
+++ b/infra/addons/loki/values.yaml
@@ -4,13 +4,10 @@ loki:
   loki:
     auth_enabled: false
     commonConfig:
+      path_prefix: /tmp/loki
       replication_factor: 1
     storage:
       type: 'filesystem'
-      bucketNames:
-        chunks: ""
-        ruler: ""
-        index: ""
     schemaConfig:
       configs:
         - from: "2024-01-01"
@@ -30,6 +27,12 @@ loki:
       limits:
         cpu: 500m
         memory: 512Mi
+    extraVolumes:
+      - name: loki-data
+        emptyDir: {}
+    extraVolumeMounts:
+      - name: loki-data
+        mountPath: /tmp/loki
   
   chunksCache:
     enabled: false
