--- a/infra/addons/loki/values.yaml
+++ b/infra/addons/loki/values.yaml
@@ -1,27 +1,37 @@
 loki:
   deploymentMode: SingleBinary
+  
+  loki:
+    
+    # This is a complete configuration to deploy Loki backed by the filesystem.
+    # The index will be shipped to the storage via tsdb-shipper.
 
-  config:
+    auth_enabled: false
+
+    server:
+      http_listen_port: 3100
+
     common:
+      ring:
+        instance_addr: 127.0.0.1
+        kvstore:
+          store: inmemory
+      replication_factor: 1
       path_prefix: /tmp/loki
-
-    storage_config:
-      tsdb_shards: 1
-      tsdb:
-        directory: /tmp/loki/tsdb
-      filesystem:
-        directory: /tmp/loki/chunks
 
     schema_config:
       configs:
-        - from: "2024-01-01"
-          store: tsdb
-          object_store: filesystem
-          schema: v13
-          index:
-            prefix: loki_index_
-            period: 24h
+      - from: 2020-05-15
+        store: tsdb
+        object_store: filesystem
+        schema: v13
+        index:
+          prefix: index_
+          period: 24h
 
+    storage_config:
+      filesystem:
+        directory: /tmp/loki/chunks
   
   singleBinary:
     replicas: 1
