--- a/infra/addons/loki/values.yaml
+++ b/infra/addons/loki/values.yaml
@@ -7,6 +7,10 @@ loki:
     commonConfig:
       path_prefix: /tmp/loki
       replication_factor: 1
+      storage:
+        filesystem:
+          chunks_directory: /tmp/loki/chunks
+          rules_directory: /tmp/loki/rules
     
     storage:
       type: filesystem
@@ -20,13 +24,26 @@ loki:
           index:
             prefix: loki_index_
             period: 24h
+    
+    ruler:
+      storage:
+        type: local
+        local:
+          directory: /tmp/loki/rules
+      wal:
+        dir: /tmp/loki/ruler-wal
   
   singleBinary:
     replicas: 1
     persistence:
       enabled: false
+    podSecurityContext:
+      runAsNonRoot: false
+      runAsUser: 0
     containerSecurityContext:
       readOnlyRootFilesystem: false
+      runAsNonRoot: false
+      runAsUser: 0
     extraVolumes:
       - name: loki-data
         emptyDir: {}
