--- a/infra/config/dev/monitoring-system/loki/values.yaml
+++ b/infra/config/dev/monitoring-system/loki/values.yaml
@@ -1,19 +1,55 @@
 loki:
   deploymentMode: SingleBinary
-  
-  singleBinary:
-    podSecurityContext:
-      runAsNonRoot: false
-      runAsUser: 0
-      fsGroup: 0
-    containerSecurityContext:
-      readOnlyRootFilesystem: false
-      runAsNonRoot: false
-      runAsUser: 0
-  
-  backend:
-    replicas: 0
-  read:
-    replicas: 0
-  write:
-    replicas: 0
+
+  loki:
+    auth_enabled: false
+
+    commonConfig:
+      path_prefix: /tmp/loki
+      replication_factor: 1
+
+    storage:
+      type: filesystem
+      filesystem:
+        chunks_directory: /tmp/loki/chunks
+        rules_directory: /tmp/loki/rules
+
+    ruler:
+      storage:
+        type: local
+        local:
+          directory: /tmp/loki/rules
+      wal:
+        dir: /tmp/loki/ruler-wal
+
+singleBinary:
+  persistence:
+    enabled: false
+
+  podSecurityContext:
+    runAsNonRoot: false
+    runAsUser: 0
+    fsGroup: 0
+
+  containerSecurityContext:
+    readOnlyRootFilesystem: false
+    runAsNonRoot: false
+    runAsUser: 0
+
+  extraVolumes:
+    - name: loki-data
+      emptyDir: {}
+
+  extraVolumeMounts:
+    - name: loki-data
+      mountPath: /tmp/loki
+
+# Disable microservices mode for dev
+backend:
+  replicas: 0
+
+read:
+  replicas: 0
+
+write:
+  replicas: 0
