update loki config and comment for understanding

--- a/infra/addons/loki/values.yaml
+++ b/infra/addons/loki/values.yaml
@@ -1,72 +1,79 @@
 loki:
+  # SingleBinary: All components in one process (dev/small deployments)
+  # Alternative: SimpleScalable (separate read/write for production)
   deploymentMode: SingleBinary
   
   loki:
+    # Disable auth for development (enable in production)
     auth_enabled: false
     
+    # Common settings shared across all Loki components
     commonConfig:
+      # Base path for Loki data storage
       path_prefix: /tmp/loki
+      # Replication factor: 1=no replication (dev), 3=HA (prod)
       replication_factor: 1
+      # Storage paths for log chunks and alerting rules
       storage:
         filesystem:
-          chunks_directory: /tmp/loki/chunks
-          rules_directory: /tmp/loki/rules
+          chunks_directory: /tmp/loki/chunks  # Compressed log data
+          rules_directory: /tmp/loki/rules    # Alerting/recording rules
     
+    # Storage backend: filesystem (dev) | s3/gcs/azure (prod)
     storage:
       type: filesystem
     
+    # Schema defines how data is stored and indexed
     schemaConfig:
       configs:
-        - from: "2024-01-01"
-          store: tsdb
-          object_store: filesystem
-          schema: v13
+        - from: "2024-01-01"        # Schema effective date
+          store: tsdb               # Time Series DB (better performance)
+          object_store: filesystem  # Must match storage.type
+          schema: v13              # Latest stable schema version
           index:
-            prefix: loki_index_
-            period: 24h
+            prefix: loki_index_    # Index file prefix
+            period: 24h           # Daily index rotation
     
+    # Ruler processes alerting and recording rules
     ruler:
       storage:
         type: local
         local:
-          directory: /tmp/loki/rules
+          directory: /tmp/loki/rules  # Rules storage directory
       wal:
-        dir: /tmp/loki/ruler-wal
+        dir: /tmp/loki/ruler-wal     # Write-Ahead Log for durability
   
+  # SingleBinary deployment configuration
   singleBinary:
-    replicas: 1
+    replicas: 1                    # Single instance (dev)
     persistence:
-      enabled: false
+      enabled: false               # No persistent storage (ephemeral)
+    # Security context (relaxed for dev, harden for prod)
     podSecurityContext:
-      runAsNonRoot: false
-      runAsUser: 0
+      runAsNonRoot: false          # Allow root (dev only)
+      runAsUser: 0                 # Root user (dev only)
     containerSecurityContext:
-      readOnlyRootFilesystem: false
-      runAsNonRoot: false
-      runAsUser: 0
+      readOnlyRootFilesystem: false # Allow writes (dev only)
+      runAsNonRoot: false          # Allow root (dev only)
+      runAsUser: 0                 # Root user (dev only)
+    # Temporary storage volumes
     extraVolumes:
       - name: loki-data
-        emptyDir: {}
+        emptyDir: {}               # Ephemeral storage
     extraVolumeMounts:
       - name: loki-data
-        mountPath: /tmp/loki
+        mountPath: /tmp/loki       # Mount at data path
   
+  # Disable caching for development (enable for production performance)
   chunksCache:
     enabled: false
   resultsCache:
     enabled: false
   
+  # Disable gateway (not needed in SingleBinary mode)
   gateway:
     enabled: false
   
+  # Disable built-in tests
   test:
     enabled: false
-
-  backend:
-    replicas: 0
-
-  read:
-    replicas: 0
-
-  write:
-    replicas: 0
